the poster size is too big when I deploy, trying to fix it

--- a/code/src/pages/movieInfo.css
+++ b/code/src/pages/movieInfo.css
@@ -57,9 +57,9 @@ body {
 .infoPoster {
     float: left;
     border: 10px solid white;
-    /* max-width: 80%; */
+    /* max-width: 80%;  */
     width: 100%;
-    height: 40% !important;   
+    /* height: 40% !important;        */
 }
 
 .titleInfo {
@@ -74,8 +74,7 @@ body {
 .movieTitle {
     font-size: 2.2vw;
     padding-right: 20px;   
-    display: inline-flex;
-    
+    display: inline-flex;   
 }
 
 .movieVotes {
